# ElasticFusion

./: Makefile  README.md  plugin.cpp
Core/src/: CMakeLists.txt  ElasticFusion.cpp
Core/src/Cuda/: reduce.cu
Core/src/Utils/: RGBDOdometry.h
GUI/src/: CMakeLists.txt  MainController.cpp  MainController.h  Makefile
GUI/src/Tools/: LiveLogReader.cpp  LiveLogReader.h
plugin/: CMakeLists.txt  Findefusion.cmake  plugin.cpp
